10217 - WIP working on using joi validation in StartCaseStep2 to validate amount and size of each pdfs [skip ci]

--- a/10217 Notes.md
+++ b/10217 Notes.md
@@ -11,8 +11,8 @@ Engineering Questions/bug/TODOs
 - [ ] CYPRESS test (cover the whole flow)
 
 Validation
-- [ ] Handle validation message for APT files in `shared/src/business/entities/cases/ElectronicPetition.ts`
 - [x] Make `attachmentToPetitionFile` name in PaperPetition consistent with `atpFiles` in ElectronicPetition
+- [ ] what is the validation message for APT files in `shared/src/business/entities/cases/ElectronicPetition.ts`?
 - [ ] How do we validate the file size in Electronic Petition? Its an array so how will that work?
 - [ ] what validation sequence should be run on file upload?
 
